# awp

./: .gitignore  CMakeLists.txt  README.md
include/awp/: calc.h  debug.h  definitions.h  dump.h  error.h  init.h  kernel.h  kernel_launch.h  pmcl3d.h  pmcl3d_cons.h  seism.h  swap.h  utils.h
include/buffers/: buffer.h
include/checksum/: checksum.h
include/checksum/md5/: md5.h
include/functions/: functions.h  norm.h  random.h
include/grid/: error.h  grid_3d.h  grid_new.h  shift.h
include/hello/: cuhello.cuh
include/interpolation/: error.h  interpolation.cuh  interpolation.h  lagrange.h
include/mpi/: distribute.h  io.h  partition.h
include/readers/: error.h  input.h  version.h
include/test/: array.h  check.h  grid_check.h  test.h
include/topography/: energy.cuh  geometry.h  grids.h  host.h  mapping.cuh  mapping.h  mms.cuh  opt_topography.cuh  stress.cuh  stress_attenuation.cuh  topography.cuh  topography.h  velocity.cuh
include/topography/examples/: constant.h
include/topography/geometry/: geometry.h
include/topography/initializations/: cerjan.h  constant.h  linear.h  quadratic.h  random.h
include/utils/: array.h  copy.h
include/vtk/: vtk.h
release/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
release/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_attenuation
release/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
reports/report/: baseline.md  mapping.md
scripts/: analysis.lsf  analysis.sh  mapping.sh  mapping_serial.sh  profile.lsf  profile.sh  quickcheck.sh  run.sh  single.sh
src/: CMakeLists.txt  README.md  cuhello.cu
src/argparse/: CMakeLists.txt  argparse.c
src/awp/: CMakeLists.txt  calc.c  cerjan.c  command.c  cuPrintf.cu  dump.c  error.c  grid.c  init.c  io.c  kernel.cu  kernel.h  mesh.c  pmcl3d.c  source.c  swap.c  utils.c
src/buffers/: CMakeLists.txt  buffer.c
src/checksum/: CMakeLists.txt  checksum.c
src/checksum/md5/: CMakeLists.txt  md5_test.c
src/debug/: Makefile.debug  addmemset.sh  debug.md  numcalls.sh
src/functions/: CMakeLists.txt  norm.c  random.c
src/grid/: CMakeLists.txt  error.c  grid_3d.c  grid_new.c  shift.c
src/interpolation/: CMakeLists.txt  error.c  interpolation.c  interpolation.cu  lagrange.c
src/mpi/: CMakeLists.txt  distribute.c  io.c  partition.c
src/readers/: CMakeLists.txt  error.c  input.c  version.c
src/test/: CMakeLists.txt  check.c  grid_check.c  test.c
src/topography/: CMakeLists.txt  energy.cu  geometry.c  grids.c  host.c  mapping.c  mms.cu  mms.py  opt_topography.cu  stress.cu  stress_attenuation.cu  topography.c  topography.cu  velocity.cu
src/topography/examples/: CMakeLists.txt  constant.c
src/topography/functions/: CMakeLists.txt  functions.c  random.c
src/topography/geometry/: CMakeLists.txt  geometry.c
src/topography/grid/: CMakeLists.txt  grid_3d.c
src/topography/initializations/: CMakeLists.txt  cerjan.c  constant.c  linear.c  quadratic.c  random.c
src/topography/input/: CMakeLists.txt  input.c  version.c
src/topography/kernels/: CMakeLists.txt  optimized.cu  optimized_stress.cu  optimized_velocity.cu  stress.cu  stress_attenuation.cu  stress_index_unroll.cu  stress_index_unroll.cuh  unoptimized.cu  velocity.cu  velocity_unroll.cu
src/topography/metrics/: CMakeLists.txt  kernel.c  metrics.c  shift.c
src/topography/readers/: CMakeLists.txt  serial_reader.c
src/topography/receivers/: CMakeLists.txt  receiver.c  receivers.c  sgt.c
src/topography/sources/: CMakeLists.txt  forces.c  source.c  source.cu  sources.c
src/utils/: CMakeLists.txt  copy.c
src/vtk/: CMakeLists.txt  vtk.c
test111/: Makefile  build_macro_unroll.sh  build_stress.sh  dm.cu  dm_unroll.cu  launch_search.sh  results.md  run_stress.sh  run_stress_macro_unroll.sh  split.cu  stress.cu  stress.md  stress_index.cu  stress_index_unroll.cu  stress_macro.cu  stress_macro_planes.cu  stress_macro_unroll.cu  stress_pascal.md  test111.cu  unroll.cu
tests/: CMakeLists.txt  README.md  test_attenuation.cu  topography_kernels.cu
tests/buffers/: CMakeLists.txt  test_buffer.cu
tests/fixtures/: build_input_files.sh  forces.in  input1.txt  receiver.txt  recvs.in  sgt.in  source.txt  source_dm.txt  source_x.txt  source_xx.txt  source_xy.txt  source_xz.txt  source_y.txt  source_z.txt  sources.in
tests/grid/: CMakeLists.txt  test_grid_3d.c  test_grid_new.c
tests/interpolation/: CMakeLists.txt  test_interpolation.c  test_interpolation.cu  test_lagrange.c
tests/mpi/: CMakeLists.txt  test_distribute.c  test_indexed.c  test_io.c
tests/readers/: CMakeLists.txt  test_input.c  test_version.c
tests/topography/: CMakeLists.txt
tests/topography/accuracy/: CMakeLists.txt  README.md  build_topography.sh  cupolynomial.cu  cupolynomial.cuh  cutopography_kernel.cu  cutopography_kernel.cuh  cutopography_test.cu  cutopography_test.cuh  functions.c  functions.h  grid_check.c  grid_check.h  mms.c  mms.h  test_accuracy.cu  test_convergence.cu  test_topography_kernels.c  topography.py  topography_test.c  topography_test.h
tests/topography/geometry/: CMakeLists.txt  test_geometry.c
tests/topography/input/: CMakeLists.txt  test_input.c  test_version.c
tests/topography/mapping/: CMakeLists.txt  test_mapping.c
tests/topography/metrics/: CMakeLists.txt  test_metrics.c
tests/topography/readers/: CMakeLists.txt  test_serial_reader.c
tests/topography/receivers/: CMakeLists.txt  test_receivers.c
tests/topography/sources/: CMakeLists.txt  test_source_distribution.c  test_sources.c  test_sources_dm.c
tools/: CMakeLists.txt
tools/OpenFD/: .gitignore  LICENSE  MANIFEST.in  README.md  advection.cu  kernel.c  kernel.h  setup.py
tools/kernel_generation/: Makefile  build.py  cumetrics_kernel.c  cumetrics_kernel.h  definitions.h  demo.py  energy.py  grid.py  helper.py  metrics.py  metrics_kernel.c  metrics_kernel.h  mms.py  scheme.py  simplified.py  test_simplified.py  variables.py
tools/write_grid/: CMakeLists.txt  README.md  write_grid.c
(+391 files in other folders)
